# rest

./: Cargo.toml  Dockerfile
migrations/2022-06-05-032723_activities/: down.sql
migrations/2022-06-05-032723_rides/: down.sql  up.sql
src/: db.rs  main.rs  personal.rs  result.rs  schema.rs
