[package]
name = "rest"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.0", features = ["json"] }
serde-aux = "3.0.1"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
chrono = { version = "0.4.19", features = ["serde"] }
lazy_static = "1.4.0"
diesel = { version = "1.4.8", features = ["postgres", "chrono"] }
